toml-pretty-deser/compilation_failure_tests/alias_enum_same_as_name.stderr
error: alias "Red" is the same as the canonical name; remove it
 --> compilation_failure_tests/alias_enum_same_as_name.rs:8:5
  |
8 |     Red,
  |     ^^^
